[gd_scene load_steps=2 format=3 uid="uid://pause_menu_scene"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1_pause_script"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 20
script = ExtResource("1_pause_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PausePanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PausePanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="PausePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LANJUTKAN"

[node name="SettingsButton" type="Button" parent="PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PENGATURAN"

[node name="MainMenuButton" type="Button" parent="PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MENU UTAMA"

[node name="QuitButton" type="Button" parent="PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KELUAR"
